semantic-search (0.0.4)

	* New sentence-transphormers version

-- Pablo Duboue, 2024/02/20


semantic-search (0.0.3)

	* New sentence-transphormers version

-- Pablo Duboue, 2024/02/14


semantic-search (0.0.2)

	* Multilingual version

-- Pablo Duboue, 2024/02/12


semantic-search (0.0.1)

	* Initial version

-- Pablo Duboue, 2024/02/08